--- a/src/content/blog/pid.mdx
+++ b/src/content/blog/pid.mdx
@@ -2,6 +2,7 @@
 title: "The Hidden Magic of PID Controllers"
 date: "2025-11-30"
 formattedDate: "November 30, 2025"
+coverImage: "../../assets/pid.png"
 description: "An interactive dive into proportional, integral, derivative (PID) control systems."
 readingTime: 18
 tags: ["controls", "engineering", "interactive"]
