--- a/src/content/blog/pid.mdx
+++ b/src/content/blog/pid.mdx
@@ -68,7 +68,7 @@ $$
 $$
 </div>
 
-$error$ is the difference between the target and current position, and $K_p$ is the proportional gain that determines how aggressive the response is.
+The $error$ is the difference between the target and current position, and $K_p$ is the proportional gain that determines how aggressive the response is.
 
 Here's how the control loop works:
 
