--- a/src/content/blog/pid.mdx
+++ b/src/content/blog/pid.mdx
@@ -112,7 +112,7 @@ Like magic, the oscillation is almost entirely gone! The system now settles smoo
 
 <div className="my-4 px-3 py-3 bg-zinc-900/40 border border-zinc-800/50 rounded-lg text-sm">
 <div className="text-zinc-300 font-medium mb-1">Watch out for noise!</div>
-<span className="text-zinc-400">Try enabling </span><span className="inline-flex items-center gap-0.5 text-red-400"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className="inline"><path d="M2 12h2l2-7 3 14 3-7 2 3h8" /></svg>Noise</span><span className="text-zinc-400"> and increasing $K_d$ to see why D can be problematic: it amplifies sensor noise. In real systems, it's often better to start with just PI and only add D when needed.</span>
+<span className="text-zinc-400">Try enabling </span><span className="inline-flex items-center gap-0.5 text-red-400"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className="inline"><path d="M2 12h2l2-7 3 14 3-7 2 3h8" /></svg>Noise</span><span className="text-zinc-400"> and increasing $\textcolor{#c084fc}{K_d}$ to see why D can be problematic: it amplifies sensor noise. In real systems, it's often better to start with just PI and only add D when needed.</span>
 </div>
 
 ---
